--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -15,7 +15,7 @@
 <script>
 
 {% if total.0 == 0 %}
-  window.location.href = "http://5.teama.2020-graduates.tk/notfound/";
+  window.location.href = "/notfound/";
 {% endif %}
 var showTemplateDialog = function(id) {
   var dialog = document.getElementById('my-dialog'+id);
