--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -118,7 +118,7 @@ var hideDialog = function(id) {
 					<span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
 				</div>
 				<div class="center">
-					<span class="list-item__subtitle"><font size="6">{{total.0}}</font></span>
+					<span class="list-item__subtitle"><font size="6">{{total.0}}円(税込)</font></span>
 				</div>
 			</ons-list-item>
 			<a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
