--- a/app/View/top/index.twig
+++ b/app/View/top/index.twig
@@ -50,7 +50,7 @@
 								<label style="vertical-align:middle">円を</label>
 							</div>
 							<!--<button type="submit" class="btn btn-primary btn-lg btn-block">スッキリ</button>-->
-							<button modifier="large" type="submit" class="btn btn-primary btn-lg btn-block">スッキリ！</button>>
+							<button modifier="large" type="submit" class="btn btn-primary btn-lg btn-block">スッキリ！</button>
 						</form>
 					</div>
 				</div>
