--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -33,7 +33,7 @@ var showTemplateDialog = function(id) {
 
 
 var changeitem = function(id, price, name, img) {
-	document.getElementById(String(id)+"-name").innerText=name;
+	document.getElementById(String(id)+"-name").innerText=name.length > 10 ? name.slice(0, 10) : name;
 	document.getElementById(String(id)+"-price").innerText=price+"円";
 	document.getElementById(String(id)+"-img").src=img;
 	hideDialog("my-dialog"+String(id));
@@ -67,19 +67,17 @@ var hideDialog = function(id) {
 			{% for val in res.0 %}
 				<ons-list-item>
 					<div class="left">
-						<img src="{{ val[0].img }}" id="{{val.0.id}}-img" alt="Onsen UI" style="width: 40vw">
+						<img src="{{ val[0].img }}" align="left" id="{{val.0.id}}-img" alt="Onsen UI" style="width: 40vw">
 					</div>
-					<div class="center">
-						<p style="text-align: left">
-							<span class="list-item__title"  overflow="auto"><font size="3" id="{{val.0.id}}-name">{{ val[0].product_name | length > 15 ? val[0].product_name | slice(0, 15) ~ '…' : val[0].product_name }}</font></span>
+					<div class="center" style="width: 40vw">
+						<p style="text-align: right">
+							<span class="list-item__title" align="right" overflow="auto"><font size="3" id="{{val.0.id}}-name">{{ val[0].product_name | length > 10 ? val[0].product_name | slice(0, 10) ~ '…' : val[0].product_name }}</font></span>
 							<br><br>
-							<span class="list-item__subtitle" ><font size="5" id="{{val.0.id}}-price">{{ val.0.price }}円</font></span>
+							<span class="list-item__subtitle" align="right"><font size="5" id="{{val.0.id}}-price">{{ val.0.price }}円</font></span>
 						</p>
-						{# </ons-list-item> #}
-						{# <br><br> #}
 
 						{#他の商品ボタン#}
-						<ons-button onclick="showTemplateDialog({{val.0.id}})">他の商品</ons-button>
+						<ons-button onclick="showTemplateDialog({{val.0.id}})" align="right">他の商品</ons-button>
 						<template id="dialog{{val.0.id}}.html">
 							{# <span style="display:none;" >{{loop.index}}</span> #}
 							<ons-dialog cancelable id="my-dialog{{val.0.id}}">
@@ -88,11 +86,11 @@ var hideDialog = function(id) {
 										{% if val[1].id %}                
 											<p>
 												{% for other in val[1:3] %}
-													<img src="{{ other.img }}" align="left" alt="Onsen UI" style="width: 40%">
-													<span class="list-item__title" overflow="hidden"><font size="3">{{ other.product_name }}</font></span>
+													<img src="{{ other.img }}" align="left" alt="Onsen UI" style="width: 30vw">
+													<span class="list-item__title" align="right"overflow="hidden"><font size="3">{{ other.product_name }}</font></span>
 													<br>
-													<span class="list-item__subtitle"><font size="3">{{ other.price}}円</font></span>
-													<section style="padding: 6px">
+													<span class="list-item__subtitle"align="right"><font size="3">{{ other.price}}円</font></span>
+													<section style="padding: 3px">
 														<ons-button modifier="large" onclick="changeitem({{val.0.id}},{{other.price}},'{{other.product_name}}','{{other.img}}')">変更する</ons-button>
 														{# add a function to the button to change contents of oritinal container -> add name to div #}
 													</section>
@@ -100,7 +98,7 @@ var hideDialog = function(id) {
 												{% endfor %}
 											</p>
 										{% else %}
-											<p overflow="auto"><font size="3">{{ other.product_name }}</font></p>
+											<p overflow="auto"><font size="3">ほかの商品がありませんでした</font></p>
 										{% endif %}
 										<p>
 											<ons-button onclick="hideDialog('my-dialog{{val.0.id}}')">閉じる</ons-button>
@@ -118,10 +116,10 @@ var hideDialog = function(id) {
 					<span class="list-item__title"><font size="5" color="#ff0000">合計金額</font></span>
 				</div>
 				<div class="center">
-					<span class="list-item__subtitle"><font size="6">{{total.0}}円(税込)</font></span>
+					<span class="list-item__subtitle"align="right"><font size="5">{{total.0}}円(税込)</font></span>
 				</div>
 			</ons-list-item>
-			<a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&amp;ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	 </ons-card>
 	</ons-page>
 </template>
@@ -135,19 +133,17 @@ var hideDialog = function(id) {
 				{% for val in res.1 %}
 					<ons-list-item>
 						<div class="left">
-							<img src="{{ val[0].img }}" id="{{val.0.id}}-img" alt="Onsen UI" style="width: 40vw">
+							<img src="{{ val[0].img }}" align="left" id="{{val.0.id}}-img" alt="Onsen UI" style="width: 40vw">
 						</div>
-						<div class="center">
-							<p style="text-align: left">
-								<span class="list-item__title"  overflow="auto"><font size="3" id="{{val.0.id}}-name">{{ val[0].product_name | length > 15 ? val[0].product_name | slice(0, 15) ~ '…' : val[0].product_name }}</font></span>
+						<div class="center" style="width: 40vw">
+							<p style="text-align: right">
+								<span class="list-item__title" align="right" overflow="auto"><font size="3" id="{{val.0.id}}-name">{{ val[0].product_name | length > 10 ? val[0].product_name | slice(0, 10) ~ '…' : val[0].product_name }}</font></span>
 								<br><br>
-								<span class="list-item__subtitle" ><font size="5" id="{{val.0.id}}-price">{{ val.0.price }}円</font></span>
+								<span class="list-item__subtitle" align="right"><font size="5" id="{{val.0.id}}-price">{{ val.0.price }}円</font></span>
 							</p>
-							{# </ons-list-item> #}
-							{# <br><br> #}
 
 							{#他の商品ボタン#}
-							<ons-button onclick="showTemplateDialog({{val.0.id}})">他の商品</ons-button>
+							<ons-button onclick="showTemplateDialog({{val.0.id}})" align="right">他の商品</ons-button>
 							<template id="dialog{{val.0.id}}.html">
 								{# <span style="display:none;" >{{loop.index}}</span> #}
 								<ons-dialog cancelable id="my-dialog{{val.0.id}}">
@@ -156,11 +152,11 @@ var hideDialog = function(id) {
 											{% if val[1].id %}                
 												<p>
 													{% for other in val[1:3] %}
-														<img src="{{ other.img }}" align="left" alt="Onsen UI" style="width: 40%">
-														<span class="list-item__title" overflow="hidden"><font size="3">{{ other.product_name }}</font></span>
+														<img src="{{ other.img }}" align="left" alt="Onsen UI" style="width: 30vw">
+														<span class="list-item__title" align="right"overflow="hidden"><font size="3">{{ other.product_name }}</font></span>
 														<br>
-														<span class="list-item__subtitle"><font size="3">{{ other.price}}円</font></span>
-														<section style="padding: 6px">
+														<span class="list-item__subtitle"align="right"><font size="3">{{ other.price}}円</font></span>
+														<section style="padding: 3px">
 															<ons-button modifier="large" onclick="changeitem({{val.0.id}},{{other.price}},'{{other.product_name}}','{{other.img}}')">変更する</ons-button>
 															{# add a function to the button to change contents of oritinal container -> add name to div #}
 														</section>
@@ -168,7 +164,7 @@ var hideDialog = function(id) {
 													{% endfor %}
 												</p>
 											{% else %}
-												<p overflow="auto"><font size="3">{{ other.product_name }}</font></p>
+												<p overflow="auto"><font size="3">ほかの商品がありませんでした</font></p>
 											{% endif %}
 											<p>
 												<ons-button onclick="hideDialog('my-dialog{{val.0.id}}')">閉じる</ons-button>
@@ -180,16 +176,16 @@ var hideDialog = function(id) {
 						</div>
 					</ons-list-item>
 				{% endfor %}
-				{#合計金額表示#}
-				<ons-list-item>
-					<div class="left">
-						<span class="list-item__title"><font size="5" color="#ff0000">合計金額</font></span>
-					</div>
-					<div class="center">
-						<span class="list-item__subtitle"><font size="5">{{total.0}}</font></span>
-					</div>
-				</ons-list-item>
-				<a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			{#合計金額表示#}
+			<ons-list-item>
+				<div class="left">
+					<span class="list-item__title"><font size="5" color="#ff0000">合計金額</font></span>
+				</div>
+				<div class="center">
+					<span class="list-item__subtitle"align="right"><font size="5">{{total.0}}円(税込)</font></span>
+				</div>
+			</ons-list-item>
+			<a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&amp;ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			{% else %}
 				<p>ほかの候補はありません</p>
 			{% endif %}
@@ -206,19 +202,17 @@ var hideDialog = function(id) {
 				{% for val in res.2 %}
 					<ons-list-item>
 						<div class="left">
-							<img src="{{ val[0].img }}" id="{{val.0.id}}-img" alt="Onsen UI" style="width: 40vw">
+							<img src="{{ val[0].img }}" align="left" id="{{val.0.id}}-img" alt="Onsen UI" style="width: 40vw">
 						</div>
-						<div class="center">
-							<p style="text-align: left">
-								<span class="list-item__title"  overflow="auto"><font size="3" id="{{val.0.id}}-name">{{ val[0].product_name | length > 15 ? val[0].product_name | slice(0, 15) ~ '…' : val[0].product_name }}</font></span>
+						<div class="center" style="width: 40vw">
+							<p style="text-align: right">
+								<span class="list-item__title" align="right" overflow="auto"><font size="3" id="{{val.0.id}}-name">{{ val[0].product_name | length > 10 ? val[0].product_name | slice(0, 10) ~ '…' : val[0].product_name }}</font></span>
 								<br><br>
-								<span class="list-item__subtitle" ><font size="5" id="{{val.0.id}}-price">{{ val.0.price }}円</font></span>
+								<span class="list-item__subtitle" align="right"><font size="5" id="{{val.0.id}}-price">{{ val.0.price }}円</font></span>
 							</p>
-							{# </ons-list-item> #}
-							{# <br><br> #}
 
 							{#他の商品ボタン#}
-							<ons-button onclick="showTemplateDialog({{val.0.id}})">他の商品</ons-button>
+							<ons-button onclick="showTemplateDialog({{val.0.id}})" align="right">他の商品</ons-button>
 							<template id="dialog{{val.0.id}}.html">
 								{# <span style="display:none;" >{{loop.index}}</span> #}
 								<ons-dialog cancelable id="my-dialog{{val.0.id}}">
@@ -227,11 +221,11 @@ var hideDialog = function(id) {
 											{% if val[1].id %}                
 												<p>
 													{% for other in val[1:3] %}
-														<img src="{{ other.img }}" align="left" alt="Onsen UI" style="width: 40%">
-														<span class="list-item__title" overflow="hidden"><font size="3">{{ other.product_name }}</font></span>
+														<img src="{{ other.img }}" align="left" alt="Onsen UI" style="width: 30vw">
+														<span class="list-item__title" align="right"overflow="hidden"><font size="3">{{ other.product_name }}</font></span>
 														<br>
-														<span class="list-item__subtitle"><font size="5">{{ other.price}}円</font></span>
-														<section style="padding: 6px">
+														<span class="list-item__subtitle"align="right"><font size="3">{{ other.price}}円</font></span>
+														<section style="padding: 3px">
 															<ons-button modifier="large" onclick="changeitem({{val.0.id}},{{other.price}},'{{other.product_name}}','{{other.img}}')">変更する</ons-button>
 															{# add a function to the button to change contents of oritinal container -> add name to div #}
 														</section>
@@ -239,7 +233,7 @@ var hideDialog = function(id) {
 													{% endfor %}
 												</p>
 											{% else %}
-												<p overflow="auto"><font size="3">{{ other.product_name }}</font></p>
+												<p overflow="auto"><font size="3">ほかの商品がありませんでした</font></p>
 											{% endif %}
 											<p>
 												<ons-button onclick="hideDialog('my-dialog{{val.0.id}}')">閉じる</ons-button>
@@ -251,16 +245,16 @@ var hideDialog = function(id) {
 						</div>
 					</ons-list-item>
 				{% endfor %}
-				{#合計金額表示#}
-				<ons-list-item>
-					<div class="left">
-						<span class="list-item__title"><font size="5" color="#ff0000">合計金額</font></span>
-					</div>
-					<div class="center">
-						<span class="list-item__subtitle"><font size="5">{{total.0}}</font></span>
-					</div>
-				</ons-list-item>
-				<a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			{#合計金額表示#}
+			<ons-list-item>
+				<div class="left">
+					<span class="list-item__title"><font size="5" color="#ff0000">合計金額</font></span>
+				</div>
+				<div class="center">
+					<span class="list-item__subtitle"align="right"><font size="5">{{total.0}}円(税込)</font></span>
+				</div>
+			</ons-list-item>
+			<a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&amp;ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			{% else %}
 				<p>ほかの候補はありません</p>
 			{% endif %}
