--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -108,13 +108,15 @@ var hideDialog = function(id) {
       {#合計金額表示#}
       <ons-list-item>
         <div class="left">
-          <span class="list-item__title"><font size="6" color="#ff0000">合計金額</font></span>
+          <span class="list-item__title"><font size="6" color="#ff0000">合計金額{{res2.0.0.product_name}}</font></span>
         </div>
         <div class="center">
           <span class="list-item__subtitle"><font size="6">{{total.0}}</font></span>
         </div>
+
       </ons-list-item>
-      <a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw&text={{res2}}{{res3}}{{res4}}{{res5}}を購入してスッキリできました！" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
    </ons-card>
 
   </ons-page>
@@ -187,6 +189,7 @@ var hideDialog = function(id) {
         <span class="list-item__subtitle"><font size="6">{{total.1}}</font></span>
       </div>
     </ons-list-item>
+    <a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw&text={{res6}}{{res7}}{{res8}}{{res9}}を購入してスッキリできました！" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
   {% else %}
@@ -266,7 +269,7 @@ var hideDialog = function(id) {
         <span class="list-item__subtitle"><font size="6">{{total.2}}</font></span>
       </div>
     </ons-list-item>
-
+    <a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw&text={{res10}}{{res11}}{{res12}}{{res13}}を購入してスッキリできました！" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
   {% else %}
       <p>ほかの候補はありません</p>
