--- a/app/View/sukkiri/sukkiri.twig
+++ b/app/View/sukkiri/sukkiri.twig
@@ -120,7 +120,7 @@ var hideDialog = function(id) {
 					<span class="list-item__subtitle"align="right"><font size="5">{{total.0}}円(税込)</font></span>
 				</div>
 			</ons-list-item>
-      <a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw&text={{res2}}{{res3}}{{res4}}{{res5}}を購入してスッキリできました！" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&amp;ref_src=twsrc%5Etfw&amp;text={{res2}}{{res3}}{{res4}}{{res5}}を購入してスッキリできました！" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	 </ons-card>
 	</ons-page>
 </template>
@@ -187,7 +187,7 @@ var hideDialog = function(id) {
 					<span class="list-item__subtitle"align="right"><font size="5">{{total.0}}円(税込)</font></span>
 				</div>
 			</ons-list-item>
-    <a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&ref_src=twsrc%5Etfw&text={{res6}}{{res7}}{{res8}}{{res9}}を購入してスッキリできました！" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a href="https://twitter.com/intent/tweet?button_hashtag=SukkiriSuica&amp;ref_src=twsrc%5Etfw&text={{res6}}{{res7}}{{res8}}{{res9}}を購入してスッキリできました！" class="twitter-hashtag-button" data-show-count="false">Tweet #SukkiriSuica</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			{% else %}
 				<p>ほかの候補はありません</p>
 			{% endif %}
